2de fixed rendering and changed background to align with main site

--- a/frontend/jbio-app/src/components/Dashboard.css
+++ b/frontend/jbio-app/src/components/Dashboard.css
@@ -174,5 +174,4 @@
 .content {
   flex-grow: 1;
   overflow-y: auto;
-  background-color: var(--background);
 }
